# learning-from-brains

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/deepspeed/: zero-2_basic-no-lr-decay.json  zero-2_basic.json
scripts/: train.py
scripts/analyses/: downstream-chance-accuracies.py  fig2_upstream-data-overview.py  fig3_hyperopt.py  fig4_upstream-performance.py  fig4_upstream_performance.py  fig5_downstream-performance.py  fig5_downstream_performance.py  sfig1_training-curve-largest-sequence-BERT.py  sfig1_training_curve_largest_sequence_BERT.py  sfig2_eval-error-brain-maps.py  sfig3_upstream-performance_pretrained-lms.py  sfig3_upstream_performance_pretrained_lms.py  sfig4-5_downstream-learning-curves.py  sfig4_5_downstream_learning_curves.py  sfig4_downstream-learning-curves.py  sfig5_downstream-performance-replication.py  sfig6_downstream-learning-curves_replication.py  sfig6_downstream-performance-replication.py  sfig6_downstream_performance_replication.py  sfig7_downstream-learning-curves_replication.py  sfig7_downstream_learning_curves_replication.py
scripts/fmriprep/: build_fmriprep_image.sh  cleanup_bids_dir.sh  download_dataset_on.sh  run_fmriprep_single_subject.sh  wrapper-1_download_dataset_on.sh  wrapper-2_fmripep.sh
src/: __init__.py  model.py  preprocessor.py  unembedder.py
src/UNKNOWN.egg-info/: SOURCES.txt
src/batcher/: __init__.py  base.py  bert.py  make.py
tests/: __init__.py  test_adapt.py  test_checkpoints.py  test_embed_dims.py  test_freeze.py  test_from-pretrained.py  test_resume.py  test_train.py
(+13704 files in other folders)
